--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -2,6 +2,8 @@ FROM node:alpine
 
 WORKDIR /usr/src/app
 
+ENV CHOKIDAR_USEPOLLING=true
+
 COPY package.json ./
 
 RUN npm install
@@ -9,3 +11,4 @@ RUN npm install
 COPY ./ ./
 
 CMD ["npm","run","start"]
+
