--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,17 @@ before_install:
 script:
   - docker run -e CI=true hhy/docker-react-app npm run test -- --coverage
 
-after_success:
-  - echo "Test Success"
+
+deploy:
+  probider: elasticbeanstalk
+  region: "us-west-2"
+  app: "docker-react-app"
+  env: "DockerReactApp-env"
+  bucket_name: "elasticbeanstalk-us-west-2-665683613775"
+  bucket_path: "elasticbeanstalk-us-west-2-665683613775"
+  on:
+    branch: master
+
+access_key_id: $AWS_ACCESS_KEY
+
+secret_access_key_id: $AWS_SECRET_ACCESS_KEY
