--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ deploy:
   probider: elasticbeanstalk
   region: "us-west-2"
   app: "docker-react-app"
-  env: "DockerReactApp-env"
+  env: "Dockerreactapp-env"
   bucket_name: "elasticbeanstalk-us-west-2-665683613775"
   bucket_path: docker-react-app
   on:
