--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ deploy:
   app: "docker-react-test"
   env: "Dockerreacttest-env"
   bucket_name: "elasticbeanstalk-ap-northeast-2-665683613775"
-  bucket_path: docker-react-app
+  bucket_path: docker-react-test
   on:
     branch: master
 
